# project_serendib

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  DEV_ENV.md  LICENSE  PROPOSAL-v2.md  PROPOSAL.md  README.md  proposal_extracted.md  proposal_ocr.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  student-task.md  student-task.yml
.github/workflows/: argilla-generator.yml  ci-validation.yml  ci.yml  dataset-iteration.yml  hf-sync.yml  ocr-batch.yml  quality-gate.yml
advanced/: README.md
advanced/templates/: parallel_record.sample.jsonl
argilla/: README.md  create_verification_dataset.py
argilla/space/: README.md  app.py  requirements.txt
corpus-raw/: README.md
data/: README.md
docs/: DEPLOYMENT-HARDENING.md  EXECUTION-ROADMAP-v2.md  GITHUB-ACTIONS-AUTOMATION.md  PILOT-PROGRAMS.md  PRODUCTION-AUDIT.md  extract_proposal_sections.py
evaluation/: README.md
future-pillars-template/: README.md
instruction/: README.md  validate_dataset.py
notebooks/: README.md
ocr-pipeline/: README.md  ocr_cli.py  ocr_proposal.py
platform/: api.py  app.py  persistence.py
reasoning/: README.md
scripts/: ocr_proposal.py  train_unsloth_qlora_7b.py  validate_dataset.py
structured/: README.md
synthetic-gen/: README.md  generate_instruction_candidates.py
tests/: test_argilla_pipeline.py  test_data_contracts.py  test_dataset_volume.py  test_gamification.py  test_ocr_batch.py  test_platform_api.py  test_release_engine.py  test_schema.py  test_shared_ocr_pipeline.py
training/: README.md  train_unsloth_qlora.py
(+111 files in other folders)
